deleting padding left for super desktops

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,9 @@ p{
     margin: 0 auto;
     max-width: 1024px;
   }
+  body #contact-section, #stack-section, #projects-section{
+    padding: 0 0 !important;
+  }
 }
 
 /* BREAKPOINT:
