--- a/src/components/HelloSection/HelloSection.css
+++ b/src/components/HelloSection/HelloSection.css
@@ -1,14 +1,43 @@
 #hello-section{
     height: calc(100vh - 10rem);
-    padding: 2rem;
+    padding: 5rem 3rem;
     align-content: end;
     h2{
-        font-size: 8rem;
+        font-size: 6rem;
+        /* to make it wrap at the same time as h1 */
+        margin-right: 12rem;
     }
     h1{
-        font-size: 12rem;
+        font-size: 11rem;
         margin: 1rem  0 3rem;
     }
+
+    .hello-btn{
+        padding: 1rem 3rem;
+        border: 1px solid var(--fonts);
+        border-radius: 3rem;
+        background: var(--gradient);
+        transition: 0.5s ease-in-out;
+        text-decoration: none;
+    }
+    .hello-btn:hover{
+        cursor: pointer;
+        background: linear-gradient(180deg, hsla(1, 94%, 87%, 1) 18%, rgb(255, 135, 23) 88%);
+        box-shadow: 0 3px 50px -3px var(--disabled);
+        transition: 0.5s ease-in-out;
+    }
     
+}
+
+@media (min-width: 769px){
+    #hello-section{
+        h2{
+            font-size: 7.5rem;
+        }
+        h1{
+            font-size: 12rem;
+            margin: 1rem  0 3rem;
+        }
+    }
 }
 
