--- a/src/components/StackSection/StackSection.css
+++ b/src/components/StackSection/StackSection.css
@@ -3,7 +3,7 @@
 }
 .stack-cards-container {
     max-width: 30rem;
-    padding: 5rem 0;
+    padding: 5rem 0 0;
     display: flex;
     justify-content:left;
     align-items: center;
@@ -54,6 +54,9 @@
 @media (min-width:769px){
     #stack-section{
         padding: 0 7rem;
+    }
+    .stack-cards-container{
+        padding-bottom: 5rem;
     }
     
 }
