--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ p{
   --fonts: #20190f;
   --disabled: #abbbb1;
   --secondary: #8fa5a4; 
+  --gradient: linear-gradient(135deg, hsla(1, 84%, 80%, 1) 34%, hsla(29, 100%, 53%, 1) 94%);
 }
 
 #root{
