--- a/src/components/ProjectsSection/ProjectsSection.css
+++ b/src/components/ProjectsSection/ProjectsSection.css
@@ -31,6 +31,12 @@
 
             img {
                 width: 2.4rem;
+                border-radius: 2.4rem;
+            }
+            img:hover{
+                box-shadow: 1px 1px 60px -5px var(--fonts);
+                transform: scale(110%);
+                transition: 0.5s;
             }
         }
 
