--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ p{
   --accent: #ff830f;
   --background: #f7f6f5;
   --fonts: #20190f;
-  --disabled: #abbbb1;
-  --secondary: #8fa5a4; 
+  --disabled: #edc8a5;
+  --secondary: #F7A2A1;
   --gradient: linear-gradient(135deg, hsla(1, 84%, 80%, 1) 34%, hsla(29, 100%, 53%, 1) 94%);
 }
 
