--- a/src/index.css
+++ b/src/index.css
@@ -50,8 +50,8 @@ p{
     margin: 0 auto;
     max-width: 1024px;
   }
-  body #contact-section, #stack-section, #projects-section{
-    padding: 0 0 !important;
+  body #hello-section, #contact-section, #stack-section, #projects-section{
+    padding: 0 0 4rem !important;
   }
 }
 
