--- a/src/components/ProjectsSection/ProjectsSection.css
+++ b/src/components/ProjectsSection/ProjectsSection.css
@@ -66,7 +66,7 @@
 
 @media (min-width: 769px) {
     #projects-section{
-        padding: 7rem;
+        padding: 7rem 2rem;
     }
     .projects-cards-container{
         padding-left: 0;
