--- a/src/components/ProjectsSection/ProjectsSection.css
+++ b/src/components/ProjectsSection/ProjectsSection.css
@@ -4,7 +4,7 @@
     padding-bottom: 4rem;
 }
 .projects-cards-container {
-    padding: 0;
+    padding: 4rem 0 0;
     display: flex;
     flex-direction: column;
 }
