max width changed to a bigger one

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+
+:root{
+  --accent: #ff830f;
+  --background: #f7f6f5;
+  --fonts: #20190f;
+  --disabled: #edc8a5;
+  --secondary: #F7A2A1;
+  --gradient: linear-gradient(135deg, hsla(1, 84%, 80%, 1) 34%, hsla(29, 100%, 53%, 1) 94%);
+}
+
+#root, body{
+  background-color: var(--background);
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -21,19 +35,12 @@ p, span{
   font-size: 1.5rem;
 }
 
-:root{
-  --accent: #ff830f;
-  --background: #f7f6f5;
-  --fonts: #20190f;
-  --disabled: #edc8a5;
-  --secondary: #F7A2A1;
-  --gradient: linear-gradient(135deg, hsla(1, 84%, 80%, 1) 34%, hsla(29, 100%, 53%, 1) 94%);
-}
 
-#root{
-  background-color: var(--background);
-}
+/* BREAKPOINTS:
 
+- 769PX
+-1024PX
+*/
 
 @media (max-width: 760px){
   /* so that navbar doesnt cover titles */
@@ -42,40 +49,12 @@ p, span{
 }
 }
 
-@media (min-width: 1025px){
-  body{
-    background-color: var(--background);
-  }
+@media (min-width: 1200px){
   #root{
     margin: 0 auto;
-    max-width: 1024px;
+    max-width: 1200px;
   }
   body #hello-section, #contact-section, #stack-section, #projects-section{
     padding: 0 0 5rem !important;
   }
 }
-
-/* BREAKPOINT:
-
-- 768PX
--1024PX
-
-* MEDIA QUERIES */
-
-/* @media (min-width: 769px) {
-    #projects-section{
-        padding: 7rem;
-    }
-    .projects-cards-container{
-        padding-left: 0;
-    }
-    .project-card {
-        max-width: 50rem;
-    }
-}
-
-@media (min-width: 900px){
-    .project-card{
-        max-width: 60rem;
-    }
-} */
