--- a/src/components/ContactSection/ContactSection.css
+++ b/src/components/ContactSection/ContactSection.css
@@ -25,9 +25,9 @@
 
         a:hover {
             color: var(--accent);
-            transform: scale(105%);
+            font-weight: 500;
             transition: all 0.5s ease-in-out;
-            text-decoration-thickness: 2px;
+            text-decoration-thickness: 3px;
         }
     }
 }
