--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 :root{
   --accent: #ff830f;
   --background: #f7f6f5;
@@ -39,7 +38,8 @@ p, span{
 /* BREAKPOINTS:
 
 - 769PX
--1024PX
+- 1024PX
+- 1200PX
 */
 
 @media (max-width: 760px){
