--- a/src/components/ProjectsSection/ProjectsSection.css
+++ b/src/components/ProjectsSection/ProjectsSection.css
@@ -55,9 +55,9 @@
     margin-top: 1rem;
     span {
         border: 1px solid var(--fonts);
-        padding: 0.5rem;
+        padding: 0.5rem 1rem;
         margin-right: 1rem;
-        border-radius: 1rem;
+        border-radius: 1.5rem;
         cursor:default;
     }
 
