--- a/src/index.css
+++ b/src/index.css
@@ -7,16 +7,16 @@
   --gradient: linear-gradient(135deg, hsla(1, 84%, 80%, 1) 34%, hsla(29, 100%, 53%, 1) 94%);
 }
 
-#root, body{
-  background-color: var(--background);
-}
-
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-size: 10px;
   font-family: monospace;
+}
+
+#root, body{
+  background-color: var(--background);
 }
 
 h1,h2,h3, p, a{
@@ -26,11 +26,16 @@ h1,h2,h3, p, a{
 h2{
   font-size: 3rem;
 }
+
 h3{
   font-size: 2.2rem;
 }
 
-p, span{
+p, button, a{
+  font-size: 1.8rem;
+}
+
+span, small{
   font-size: 1.5rem;
 }
 
